# BrReseaRepo

./: .env.example  .gitignore  .webui_secret_key  Dockerfile  Dockerfile.openfoam  Dockerfile.simulations  README.md  Readme2.md  celerybeat-schedule.db  package-lock.json  package.json  prod.md  pyproject.toml  requirements-api.txt  requirements-plugins.txt  requirements-workers.txt  requirements.txt  start.sh
.brixta/: connection.json
api/: auth.py  main.py  mcp_server.py  simulations.py  sources.py
brixta-dashboard/: Dockerfile  README.md
brixta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
brixta_cli/: __init__.py  config.py  connect.py  doctor.py  knowledge.py  main.py  tunnel.py  verify.py
brixta_mcp/: __init__.py  auth.py  server.py
brixta_sdk/: context.py  embedding.py  simulation.py  simulations.py
core/: config.py  database.py  plugin_loader.py  retry_policy.py
gateway/: main.py
infra/: drizzle.config.ts  migrate.mjs  package-lock.json  package.json  schema.ts
k8s/: cloudflared.yaml  control-plane-rbac.yaml  dashboard.yaml  drizzle-job.yaml  gateway.yaml  hpa.yaml  infisical-secret.yaml  mcp-deployment.yaml  mcp-ingress.yaml  mcp-secrets.yaml  mcp-service.yaml  minio-init.yaml  minio.yaml  namespace.yaml  network-policy.yaml  pvc.yaml  redis.yaml  scheduler.yaml  vpa-embeddings.yaml  worker-embeddings.yaml  worker-openfoam.yaml  worker-simulations.yaml  workers-light.yaml
runtime/: celery_app.py
scripts/: bootstrap-local.sh
shared/: config.py  constants.py  database.py  enums.py  exceptions.py  schemas.py
(+143 files in other folders)
