[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brixta"
version = "2.1.0"
description = "Integration-first AI ingestion, retrieval, and MCP runtime"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-dotenv>=1,<2",
  "python-multipart>=0.0.9,<1",
  "PyJWT[crypto]>=2.10,<3",
  "celery[redis]>=5.4,<6",
  "redis>=5,<7",
  "requests>=2.32,<3",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "pgvector>=0.3,<1",
  "minio>=7.2,<8",
]

[project.optional-dependencies]
rag = [
  "sentence-transformers>=3,<6",
  "einops>=0.7,<1",
  "fastmcp>=2,<3",
]
workers = [
  "docling>=2,<3",
  "sentence-transformers>=3,<6",
]
operations = [
  "docker>=7,<8",
  "kubernetes>=31,<37",
]

[project.scripts]
brixta = "brixta_cli.main:main"

[tool.setuptools.packages.find]
include = ["api*", "brixta_cli*", "brixta_mcp*", "brixta_sdk*", "core*", "plugins*", "runtime*"]
